fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,14 @@ html,body{
   width:100%;
   height:100%;
   color:rgba(240,240,240);
+  overflow:hidden;
 
+}
+
+#root{
+  width:100%;
+  height:100%;
+  overflow:hidden;
 }
 
 *{
@@ -132,7 +139,8 @@ li{
 .App {
   text-align: center;
   height:100%;
-  overflow:scroll;
+  overflow:hidden;
+  overflow-y:auto;
   background:transparent;
 }
 
